<resources>
    <string name="app_name">Washer</string>
    <string name="app_name_display">WASHER</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBRop6_RztxsuXASY-CftdFtMwAuFbG2Q4</string>
    <string name="conekta_key" templateMergeStrategy="preserve" translatable="false">key_SwHV7ybQx64daTopMTQhZrw</string>
    <string name="title_activity_login">INICIAR SESIÓN</string>
    <string name="init_string">-</string>
    <string name="add_car">AGREGAR VEHÍCULO</string>
    <string name="error_invalid_email">EL CORREO ELECTRONICO ES INVALIDO</string>
    <string name="error_invalid_password">LA CONSTRASEÑA ES MUY CORTA</string>
    <string name="error_incorrect_password">CONTRASEÑA INVALIDA</string>
    <string name="error_field_required">TODOS LOS CAMPOS SON REQUERIDOS</string>
    <string name="log_in_button">INICIAR SESIÓN</string>
    <string name="register_button">REGÍSTRATE</string>
    <string name="logo">LOGO</string>
    <string name="log_in_title">INICIAR SESIÓN</string>
    <string name="hint_email">ejemplo@mail.com</string>
    <string name="hint_password">Contraseña</string>
    <string name="forgot_password">¿OLVIDASTE TU CONTRASEÑA?</string>
    <string name="cancel">CANCELAR</string>
    <string name="ok">LISTO</string>
    <string name="save">GUARDAR</string>
    <string name="forgot_password_description">Introduzca su correo electrónico y le enviaremos un enlace para restablecer su contraseña.</string>
    <string name="recover_password_button">RESTABLECER CONTRASEÑA</string>
    <string name="forgot_password_title">OLVIDASTE TU CONTRASEÑA</string>
    <string name="create_account_title">CREAR CUENTA</string>
    <string name="next">CONTINUAR</string>
    <string name="title_activity_create_account">CREAR CUENTA</string>
    <string name="hint_phone">Telefono</string>
    <string name="hint_repeat_password">Confirmar contraseña</string>
    <string name="hint_name">NOMBRE</string>
    <string name="hint_lastname">APELLIDO</string>
    <string name="image_description">Imagen Usuario</string>
    <string name="hint_cardnumber">NUMERO DE TARJETA</string>
    <string name="hint_cardCVV">CVV</string>
    <string name="hint_location">UBICACION</string>
    <string name="outside">Lavado Exterior</string>
    <string name="outside_description_left"> -Carrocería\n -Rines</string>
    <string name="outside_description_right"> -Llantas\n -Cristales</string>
    <string name="outside_description_bottom">No se requiere estar presente durante el servicio.</string>
    <string name="outside_description_bike_left"> -Carrocería\n -Rines\n -Asiento</string>
    <string name="outside_and_inside">Lavado Interior</string>
    <string name="outside_and_inside_description_left"> -Carrocería\n -Rines\n -Cristales</string>
    <string name="outside_and_inside_description_right"> -Llantas\n -Aspirado\n -Limpieza de habitáculo</string>
    <string name="outside_and_inside_description_bottom">Se requiere abrir el vehículo al inicio y cerrar al término del servicio.</string>
    <string name="arriving_in">Llegando en: </string>
    <string name="search">Buscar</string>
    <string name="looking">Buscando lavador</string>
    <string name="accepted">Llegando en: 15 min</string>
    <string name="on_the_way">De camino</string>
    <string name="started">Terminando servicio en: </string>
    <string name="finished">Terminado</string>
    <string name="canceled">Tu servicio fue cancelado</string>
    <string name="notify_accepted">Tu servicio fue aceptado</string>
    <string name="notify_started">Tu servicio ha comenzado</string>
    <string name="notify_canceled">Tu servicio fue cancelado</string>
    <string name="notify_finished">Tu servicio ha terminado</string>
    <string name="menu_button">Menu</string>
    <string-array name="menu_options">
        <item name="payment_title">PAGO</item>
        <item name="billing_title">FACTURACIÓN</item>
        <item name="history_title">HISTORIAL</item>
        <item name="cars_title">VEHÍCULOS</item>
        <item name="promos_title">PROMOCIONES</item>
        <item name="help_title">AYUDA</item>
        <item name="be_part_of_team">SE PARTE DEL EQUIPO</item>
        <item name="configuration_title">CONFIGURACIÓN</item>
        <item name="about_title">Acerca de</item>
    </string-array>
    <string name="payment_title">PAGO</string>
    <string name="billing_title">FACTURACIÓN</string>
    <string name="history_title">HISTORIAL</string>
    <string name="cars_title">VEHÍCULOS</string>
    <string name="help_title">AYUDA</string>
    <string name="be_part_of_team">SE PARTE DEL EQUIPO</string>
    <string name="configuration_title">CONFIGURACIÓN</string>
    <string name="about_title">ACERCA DE</string>
    <string name="add_card">Agregar</string>
    <string name="name">NOMBRE</string>
    <string name="rfc">RFC</string>
    <string name="address">DIRECCIÓN FISCAL</string>
    <string name="change_data">EDITAR DATOS</string>
    <string name="report_problem">Reportar un problema con el último servicio</string>
    <string name="services">Servicios</string>
    <string name="account">Cuenta</string>
    <string name="payment">Pagos</string>
    <string name="how_to">Como usar Washer</string>
    <string name="edit_account">EDITAR CUENTA</string>
    <string name="log_out">DESCONECTAR</string>
    <string name="change_image">CAMBIAR FOTO</string>
    <string name="about">Washer para lavar tu auto</string>
    <string name="summary_title">Resumen</string>
    <string name="summary_description">Resumen del servicio</string>
    <string name="evaluation_description">Evalua tu servicio</string>
    <string name="send">Enviar</string>
    <string name="error_sending_review">Error al enviar la evaluacion</string>
    <string name="invalid_email">Correo electronico invalido</string>
    <string name="invalid_password">Contraseña invalida, debe ser al menos 6 caracteres de largo</string>
    <string name="invalid_password_dont_march">Las contraseñas no coinciden</string>
    <string name="error_registering_user">Error al registrar un usuario nuevo</string>
    <string name="error_logging_in">Error al iniciar sesion</string>
    <string name="error_reading_service">Error al leer servicio</string>
    <string name="expiration_date_month">MM</string>
    <string name="expiration_date_year">YY</string>
    <string name="payment_unavailable">Pagos no disponibles</string>
    <string name="error_credit_card">Error con la tarjeta de credito</string>
    <string name="error_processing_payment">Error agregando la tarjeta</string>
    <string name="edit_card">EDITAR TARJETA</string>
    <string name="information">VER INFORMACIÓN</string>
    <string name="space">&#032;</string>
    <string name="status_changed">Cambio de estado</string>
    <string name="delete_alert">Seguro que deseas eliminar?</string>
    <string name="edit_car_title">EDITAR VEHÍCULO</string>
    <string name="error_editing_car">Error editando vehículo</string>
    <string name="billing_name">NOMBRE O RAZÓN SOCIAL</string>
    <string name="RFC">RFC</string>
    <string name="billing_address">DIRECCIÓN</string>
    <string name="no_credit_card">Agrega una tarjeta de credito</string>
    <string name="error_reading_user">Error al leer el usuario</string>
    <string name="error_logging_out">Error cerrando sesion</string>
    <string name="name_and_lastname_missing">Nombre y apellido son necesarios</string>
    <string name="error_adding_car">Error agregando vehículo</string>
    <string name="no_cleaners">No hay lavadores cercanos</string>
    <string name="price">$%s</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="add_later">AGREGAR LUEGO</string>
    <string name="mising_values">Faltan valores</string>
    <string name="no_location_service">Esta aplicacion no puede funcionar sin la ubicacion habilitada</string>
    <string name="error_on_cancel">No se puede cancelar en este momento</string>
    <string name="service_started">Tu servicio comenzo</string>
    <string name="service_accepted">Tu servicio fue aceptado</string>
    <string name="add_payment">AGREGAR</string>
    <string name="error_firebase">Usuario fue creado. Experimentamos problemas con el servidor</string>
    <string name="error_setting_favorite_car">Error al seleccionar vehículo favorito</string>
    <string name="service_taking_long">Lavador esta tomando mucho tiempo</string>
    <string name="service_taking_long_message">Deseas cancelar?</string>
    <string name="wait">Esperar</string>
    <string name="platesExample">0000 AAA</string>
    <string name="init_date_string">00/00/00 00:00 AM</string>
    <string name="phone">Telefono</string>
    <string name="legal">Legal</string>
    <string name="vashen_web">washer.mx</string>
    <string name="copyright">Copyright</string>
    <string name="terms_and_conditions">Terminos y Condiciones</string>
    <string name="privacy">Politica de Privacidad</string>
    <string name="software_license">Licencia de Software</string>
    <string name="copyright_info">Loren ipsum</string>
    <string name="email">EMAIL</string>
    <string name="copiar">Copiar</string>
    <string name="codigoPersonal">codigo</string>
    <string name="promocionesTitulo">Promociones</string>
    <string name="agregar">Agregar</string>
    <string name="codigoPromocionExplicacion">Dale a tus amigos credito por probar Washer. Tu obtendras $100 pesos de credito por cada amigo que utilice tu codigo.</string>
</resources>