<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alan.washer.washeruser.EditAccountActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/editImage"
            android:contentDescription="@string/image_description"
            android:onClick="onClickImage"
            android:layout_gravity="center"
            android:src="@drawable/default_image"
            android:layout_marginTop="20dp" />

        <TextView
            style="@style/aux_text_style"
            android:layout_width="fill_parent"
            android:text="@string/change_image"
            android:id="@+id/textView8" />

        <TextView
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:text="@string/name"
            android:id="@+id/textView"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp" />

        <EditText
            style="@style/input_text"
            android:layout_width="fill_parent"
            android:id="@+id/nameEdit"
            android:inputType="text"
            android:hint="@string/hint_name"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp" />

        <TextView
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:text="@string/hint_lastname"
            android:id="@+id/textView13"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp" />

        <EditText
            style="@style/input_text"
            android:layout_width="fill_parent"
            android:id="@+id/lastNameEdit"
            android:inputType="text"
            android:hint="@string/hint_lastname"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp" />

        <TextView
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:text="@string/email"
            android:id="@+id/textView14"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp" />

        <EditText
            style="@style/input_text"
            android:layout_width="fill_parent"
            android:id="@+id/emailEdit"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp" />

        <TextView
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:text="@string/phone"
            android:id="@+id/textView15"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp" />

        <EditText
            style="@style/input_text"
            android:layout_width="fill_parent"
            android:id="@+id/celEdit"
            android:inputType="numberDecimal"
            android:hint="@string/hint_phone"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:maxLength="12"/>

    </LinearLayout>
</ScrollView>
