<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alan.washer.washeruser.LegalOptions">

    <TextView
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/copyright"
        android:id="@+id/copyright"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClickChange"/>

    <TextView
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/terms_and_conditions"
        android:id="@+id/terms"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:onClick="onClickChange"/>

    <TextView
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/privacy"
        android:id="@+id/privacy"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClickChange"/>

    <TextView
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/software_license"
        android:id="@+id/license"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:onClick="onClickChange"/>
</LinearLayout>
