<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alan.washer.washeruser.CreateAccount"
    android:background="@drawable/background_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            style="@style/input_text"
            android:layout_width="fill_parent"
            android:id="@+id/createEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp" />

        <EditText
            style="@style/input_text"
            android:layout_width="fill_parent"
            android:id="@+id/createPhone"
            android:inputType="phone"
            android:hint="@string/hint_phone"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:maxLength="12" />

        <EditText
            style="@style/input_text"
            android:layout_width="fill_parent"
            android:id="@+id/createPassword"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp" />

        <EditText
            style="@style/input_text"
            android:layout_width="fill_parent"
            android:id="@+id/createPassword2"
            android:inputType="textPassword"
            android:hint="@string/hint_repeat_password"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp" />
    </LinearLayout>
</ScrollView>
