<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alan.washer.washeruser.CreateAccountPersonal"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/createImage"
        android:contentDescription="@string/image_description"
        android:layout_marginTop="@dimen/top_padding"
        android:layout_marginStart="10dp"
        android:onClick="onClickImage"
        android:src="@drawable/default_image" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/top_padding"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp">

        <EditText
            style="@style/edit_text"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/createName"
            android:inputType="text"
            android:hint="@string/hint_name"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <EditText
            style="@style/edit_text"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/createLastName"
            android:inputType="text"
            android:hint="@string/hint_lastname"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>
    </LinearLayout>

</LinearLayout>
